--- a/index.html
+++ b/index.html
@@ -10,169 +10,187 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
 
   <body>
     <header class="header-style">
-      <nav>
-        <a class="link logo-web" href="./index.html">
-          Web<span class="logo-studio-dark">Studio</span>
-        </a>
-        <ul class="list">
-          <li><a class="link nav-links" href="./index.html">Studio</a></li>
-          <li><a class="link nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link nav-links" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="list">
-          <li>
-            <a class="link header-contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link header-contacts" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="link logo-web" href="./index.html">
+            Web<span class="logo-studio-dark">Studio</span>
+          </a>
+          <ul class="list header-list">
+            <li><a class="link nav-links" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link nav-links" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="link nav-links" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="list contact-list">
+            <li>
+              <a class="link header-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link header-contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--main section   Effective Solutions for Your Business-->
-      <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+      <section class="hero-section-style">
+        <div class="container hero-section-conatiner">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <!--Section 2- our advantages-->
-      <section>
-        <h2 class="section-titles" hidden>Our advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="card-titles">Strategy</h3>
-            <p class="card-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-titles">Punctuality</h3>
-            <p class="card-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-titles">Diligence</h3>
-            <p class="card-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-titles">Technologies</h3>
-            <p class="card-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section-advantages-style">
+        <div class="container">
+          <h2 class="section-titles" hidden>Our advantages</h2>
+          <ul class="list advantages-list">
+            <li class="advantages-list-card">
+              <h3 class="card-titles">Strategy</h3>
+              <p class="card-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-list-card">
+              <h3 class="card-titles">Punctuality</h3>
+              <p class="card-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-list-card">
+              <h3 class="card-titles">Diligence</h3>
+              <p class="card-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li >
+              <h3 class="card-titles">Technologies</h3>
+              <p class="card-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section 3 What are we doing-->
-      <section>
-        <h2 class="section-titles">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images_main_page/computer.jpg"
-              alt="computer"
-              height="300"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images_main_page/phone.jpg"
-              alt="phone"
-              height="300"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images_main_page/phone_in_hand.jpg"
-              alt="phone in hand"
-              height="300"
-              width="360"
-            />
-          </li>
-        </ul>
+      <section class="section-what-style">
+        <div class="container">
+          <h2 class="section-titles title-what-are">What are we doing</h2>
+          <ul class="list list-img-what">
+            <li>
+              <img
+                src="./images_main_page/computer.jpg"
+                alt="computer"
+                height="300"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images_main_page/phone.jpg"
+                alt="phone"
+                height="300"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images_main_page/phone_in_hand.jpg"
+                alt="phone in hand"
+                height="300"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--section 4 our team-->
-      <section class="section-team">
-        <h2 class="section-titles">Our Team</h2>
-        <ul class="list">
-          <li class="card">
-            <img
-              src="./images_main_page/mark_guerrero_product_des.jpg"
-              alt="Mark Guerrero"
-              height="260"
-              width="264"
-            />
-            <h3 class="card-titles team">Mark Guerrero</h3>
-            <p class="card-description team">Product Designer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images_main_page/tom_ford_frontend_dev.jpg"
-              alt="Tom Ford"
-              height="260"
-              width="264"
-            />
-            <h3 class="card-titles team">Tom Ford</h3>
-            <p class="card-description team">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images_main_page/camila_garcia_Marketing.jpg"
-              alt="Camila Garcia"
-              height="260"
-              width="264"
-            />
-            <h3 class="card-titles team">Camila Garcia</h3>
-            <p class="card-description team">Marketing</p>
-          </li>
-
-          <li class="card">
-            <img
-              src="./images_main_page/daniel_wilson_ui_des.jpg"
-              alt="Daniel Wilson"
-              height="260"
-              width="264"
-            />
-            <h3 class="card-titles team">Daniel Wilson</h3>
-            <p class="card-description team">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section-team-style">
+        <div class="container">
+          <h2 class="section-titles">Our Team</h2>
+          <ul class="list">
+            <li class="card">
+              <img
+                src="./images_main_page/mark_guerrero_product_des.jpg"
+                alt="Mark Guerrero"
+                height="260"
+                width="264"
+              />
+              <h3 class="card-titles team">Mark Guerrero</h3>
+              <p class="card-description team">Product Designer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images_main_page/tom_ford_frontend_dev.jpg"
+                alt="Tom Ford"
+                height="260"
+                width="264"
+              />
+              <h3 class="card-titles team">Tom Ford</h3>
+              <p class="card-description team">Frontend Developer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images_main_page/camila_garcia_Marketing.jpg"
+                alt="Camila Garcia"
+                height="260"
+                width="264"
+              />
+              <h3 class="card-titles team">Camila Garcia</h3>
+              <p class="card-description team">Marketing</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images_main_page/daniel_wilson_ui_des.jpg"
+                alt="Daniel Wilson"
+                height="260"
+                width="264"
+              />
+              <h3 class="card-titles team">Daniel Wilson</h3>
+              <p class="card-description team">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--footer-->
-    <footer class="footer">
-      <a class="link logo-web" href="./index.html"
-        >Web<span class="logo-studio-light">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer-style">
+      <div class="container">
+        <a class="link logo-web" href="./index.html"
+          >Web<span class="logo-studio-light">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
