--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!--Section 2- our advantages-->
       <section class="section-advantages-style">
         <div class="container">
-          <h2 class="section-titles" hidden>Our advantages</h2>
+          <h2 class="section-titles visually-hidden">Our advantages</h2>
           <ul class="list advantages-list">
             <li class="advantages-list-card">
               <h3 class="card-titles">Strategy</h3>
@@ -86,7 +86,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li >
+            <li class="advantages-list-card">
               <h3 class="card-titles">Technologies</h3>
               <p class="card-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -102,7 +102,7 @@
         <div class="container">
           <h2 class="section-titles title-what-are">What are we doing</h2>
           <ul class="list list-img-what">
-            <li>
+            <li class="img-what-are-we-doing">
               <img
                 src="./images_main_page/computer.jpg"
                 alt="computer"
@@ -110,7 +110,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="img-what-are-we-doing">
               <img
                 src="./images_main_page/phone.jpg"
                 alt="phone"
@@ -118,7 +118,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="img-what-are-we-doing">
               <img
                 src="./images_main_page/phone_in_hand.jpg"
                 alt="phone in hand"
@@ -133,10 +133,10 @@
       <!--section 4 our team-->
       <section class="section-team-style">
         <div class="container">
-          <h2 class="section-titles">Our Team</h2>
-          <ul class="list">
+          <h2 class="section-titles title-team">Our Team</h2>
+          <ul class="list team-list">
             <li class="card">
-              <img
+              <img class="img-team"
                 src="./images_main_page/mark_guerrero_product_des.jpg"
                 alt="Mark Guerrero"
                 height="260"
@@ -146,7 +146,7 @@
               <p class="card-description team">Product Designer</p>
             </li>
             <li class="card">
-              <img
+              <img class="img-team"
                 src="./images_main_page/tom_ford_frontend_dev.jpg"
                 alt="Tom Ford"
                 height="260"
@@ -156,7 +156,7 @@
               <p class="card-description team">Frontend Developer</p>
             </li>
             <li class="card">
-              <img
+              <img class="img-team"
                 src="./images_main_page/camila_garcia_Marketing.jpg"
                 alt="Camila Garcia"
                 height="260"
@@ -166,7 +166,7 @@
               <p class="card-description team">Marketing</p>
             </li>
             <li class="card">
-              <img
+              <img class="img-team"
                 src="./images_main_page/daniel_wilson_ui_des.jpg"
                 alt="Daniel Wilson"
                 height="260"
