--- a/index.html
+++ b/index.html
@@ -136,44 +136,56 @@
           <h2 class="section-titles title-team">Our Team</h2>
           <ul class="list team-list">
             <li class="card">
-              <img class="img-team"
+              <img
+                class="img-team"
                 src="./images_main_page/mark_guerrero_product_des.jpg"
                 alt="Mark Guerrero"
                 height="260"
                 width="264"
               />
-              <h3 class="card-titles team">Mark Guerrero</h3>
-              <p class="card-description team">Product Designer</p>
+              <div class="container team-names-container">
+                <h3 class="card-titles team">Mark Guerrero</h3>
+                <p class="card-description team">Product Designer</p>
+              </div>
             </li>
             <li class="card">
-              <img class="img-team"
+              <img
+                class="img-team"
                 src="./images_main_page/tom_ford_frontend_dev.jpg"
                 alt="Tom Ford"
                 height="260"
                 width="264"
               />
-              <h3 class="card-titles team">Tom Ford</h3>
-              <p class="card-description team">Frontend Developer</p>
+              <div class="container team-names-container">
+                <h3 class="card-titles team">Tom Ford</h3>
+                <p class="card-description team">Frontend Developer</p>
+              </div>
             </li>
             <li class="card">
-              <img class="img-team"
+              <img
+                class="img-team"
                 src="./images_main_page/camila_garcia_Marketing.jpg"
                 alt="Camila Garcia"
                 height="260"
                 width="264"
               />
-              <h3 class="card-titles team">Camila Garcia</h3>
-              <p class="card-description team">Marketing</p>
+              <div class="container team-names-container">
+                <h3 class="card-titles team">Camila Garcia</h3>
+                <p class="card-description team">Marketing</p>
+              </div>
             </li>
             <li class="card">
-              <img class="img-team"
+              <img
+                class="img-team"
                 src="./images_main_page/daniel_wilson_ui_des.jpg"
                 alt="Daniel Wilson"
                 height="260"
                 width="264"
               />
-              <h3 class="card-titles team">Daniel Wilson</h3>
-              <p class="card-description team">UI Designer</p>
+              <div class="container team-names-container">
+                <h3 class="card-titles team">Daniel Wilson</h3>
+                <p class="card-description team">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
