--- a/portfolio.html
+++ b/portfolio.html
@@ -11,146 +11,197 @@
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio-Web Studio</title>
   </head>
 
   <body>
-     <header class="header-style">
-      <nav>
-        <a class="link logo-web" href="./index.html">
-          Web<span class="logo-studio-dark">Studio</span>
-        </a>
-        <ul class="list">
-          <li><a class="link nav-links" href="./index.html">Studio</a></li>
-          <li><a class="link nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link nav-links" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="list">
-          <li>
-            <a class="link header-contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link header-contacts" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header-style">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="link logo-web" href="./index.html">
+            Web<span class="logo-studio-dark">Studio</span>
+          </a>
+          <ul class="list header-list">
+            <li><a class="link nav-links" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link nav-links" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="link nav-links" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="list contact-list">
+            <li>
+              <a class="link header-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link header-contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="section-projects-style">
         <div class="container">
-          <h1 hidden>Projects</h1>
+          <h1 class="visually-hidden">Projects</h1>
           <!-- buttons-portfolio page -->
-          <ul class="list">
-            <li><button class="section-buttons" type="button">All</button></li>
+
+          <ul class="list btn-portfolio-list">
+            <li>
+              <button class="section-buttons" type="button">All</button>
+            </li>
             <li>
               <button class="section-buttons" type="button">Web Site</button>
             </li>
-            <li><button class="section-buttons" type="button">App</button></li>
-            <li><button class="section-buttons" type="button">Design</button></li>
+            <li>
+              <button class="section-buttons" type="button">App</button>
+            </li>
+            <li>
+              <button class="section-buttons" type="button">Design</button>
+            </li>
             <li>
               <button class="section-buttons" type="button">Marketing</button>
             </li>
           </ul>
+
           <!-- Projects-portfolio page -->
-          <ul class="list">
-            <li>
-              <a class="link"><img
-                src="./images_portfolio_page/img-1-bank-app.jpg"
-                alt="Banking App Interface"
-                width="360"
-                height="300"
-              /><h2 class="card-titles">Banking App Interface Concept</h2>
-              <p class="card-description">App</p></a>
-          
+          <ul class="list projects-list">
+            <li class="projects-cards">
+              <a class="link"
+                ><img
+                  src="./images_portfolio_page/img-1-bank-app.jpg"
+                  alt="Banking App Interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Banking App Interface Concept</h2>
+                  <p class="card-description">App</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-2-scan.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              /><h2 class="card-titles">Cashless Payment</h2>
-              <p class="card-description">Marketing</p></a>
-          
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-2-scan.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Cashless Payment</h2>
+                  <p class="card-description">Marketing</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-3-return.jpg"
-                alt="Phone and laptop"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Meditation App</h2>
-              <p class="card-description">App</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-3-return.jpg"
+                  alt="Phone and laptop"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Meditation App</h2>
+                  <p class="card-description">App</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-4-car.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Taxi Service</h2>
-              <p class="card-description">Marketing</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-4-car.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Taxi Service</h2>
+                  <p class="card-description">Marketing</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-5-phone.jpg"
-                alt="Screens"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Screen Illustrations</h2>
-              <p class="card-description">Design</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-5-phone.jpg"
+                  alt="Screens"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Screen Illustrations</h2>
+                  <p class="card-description">Design</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-6-girl.jpg"
-                alt="Girl with phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Online Courses</h2>
-              <p class="card-description">Marketing</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-6-girl.jpg"
+                  alt="Girl with phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Online Courses</h2>
+                  <p class="card-description">Marketing</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-7-storie.jpg"
-                alt="Instagram Stories"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Instagram Stories Concept</h2>
-              <p class="card-description">Design</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-7-storie.jpg"
+                  alt="Instagram Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Instagram Stories Concept</h2>
+                  <p class="card-description">Design</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-8-food.jpg"
-                alt="Women with fruits"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Organic Food</h2>
-              <p class="card-description">Web Site</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-8-food.jpg"
+                  alt="Women with fruits"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Organic Food</h2>
+                  <p class="card-description">Web Site</p>
+                </div></a
+              >
             </li>
-            <li>
-              <a class="link" href=""><img
-                src="./images_portfolio_page/img-9-coffee.jpg"
-                alt="Coffee in cup"
-                width="360"
-                height="300"
-              />
-              <h2 class="card-titles">Fresh Coffee</h2>
-              <p class="card-description">Web Site</p></a>
+            <li class="projects-cards">
+              <a class="link" href=""
+                ><img
+                  src="./images_portfolio_page/img-9-coffee.jpg"
+                  alt="Coffee in cup"
+                  width="360"
+                  height="300"
+                />
+                <div class="projects-name-container">
+                  <h2 class="card-titles">Fresh Coffee</h2>
+                  <p class="card-description">Web Site</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -158,14 +209,16 @@
     </main>
 
     <!--footer-->
-     <footer class="footer">
-      <a class="link logo-web" href="./index.html"
-        >Web<span class="logo-studio-light">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer-style">
+      <div class="container">
+        <a class="link logo-web" href="./index.html"
+          >Web<span class="logo-studio-light">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
