--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!--Section 2- our advantages-->
       <section class="section-advantages-style">
         <div class="container">
-          <h2 class="section-titles visually-hidden">Our advantages</h2>
+          <h2 class="visually-hidden">Our advantages</h2>
           <ul class="list advantages-list">
             <li class="advantages-list-card">
               <h3 class="card-titles">Strategy</h3>
